fixed new event on mobile

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -10,7 +10,6 @@
 }
 
 .well.form_container{
-  margin: 20px 20% 20% 20%;
   background-color: #EAE8E8;
   padding: 3em;
   border-radius: 10px;
